--- a/Result.html
+++ b/Result.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		<meta charset="UTF-8">
-		<title>~~~~~~~Amazing Search Box~~~~~~~</title>
+		<title>PrePAIR Me</title>
 		<h1 style = "text-align : center;"> <br>Result</h1>
 		
 <body style = "text-align:center">
