Added info for a course

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		
 <script>
 function search(){
-	location.href = "Result.html";
+	location.href = "result.html";
 }
 
 function changeInput(num){
