Added info for one course

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $(document).ready(function(){
 
 <div style = "text-align:center;">
 <br><br> <input type="text" id = "input" style="width:500px;height:20px;font-size:18px;" >
-<button  id ="search" onclick="search()" style="width:70px;font-size:15px;">Search</button> <br><br>
+<!-- Send course from here --><button  id ="search" onclick="search()" style="width:70px;font-size:15px;">Search</button> <br><br>
 </div>
 
 <div style = "border:2px dotted; border-radius: 10px; height: auto;width: 500px; margin-left:340px;">
