--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ function clearData(){
 $(document).ready(function(){
 	$("input").keyup(function(){
 	var input= document.getElementById("input");
-	var key= input.value	
+	var key= input.value;	
 	
 	if (window.XMLHttpRequest)
 	  {// for IE7+, Firefox, Chrome, Opera, Safari
@@ -85,10 +85,12 @@ $(document).ready(function(){
 
 </head>
 
+<form name="input" action="result.php" method="get">
 <div style = "text-align:center;">
 <br><br> <input type="text" id = "input" style="width:500px;height:20px;font-size:18px;" >
-<!-- Send course from here --><button  id ="search" onclick="search()" style="width:70px;font-size:15px;">Search</button> <br><br>
+<!-- Send course from here --><input type = "submit" value = "Search" id ="search" onclick="search()" style="width:70px;font-size:15px;"> <br><br>
 </div>
+</form>
 
 <div style = "border:2px dotted; border-radius: 10px; height: auto;width: 500px; margin-left:340px;">
 <p id="data0" style="cursor: pointer;" onclick= "changeInput(0)" style= "font-size:20px;"><i>Suggested Words...</i></p>
