--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+<body bgcolor = "#E6E6FA">
+<img src = "UBC_logo_b2.jpg" height="200" width="200" >
+</body>
 <head>
 		<script src="jquery-1.10.0.min.js"></script>
 		<meta charset="UTF-8">
@@ -75,5 +78,4 @@ $(document).ready(function(){
 <footer style = "text-align:right; font-size:13px;">
 Chrome and 1024x768 or above resolution is recommended.<br>
 </footer>
-
 </html>
