Changed position of UBC logo. Fixed position of items in carousel to disable scrolling

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
 <body bgcolor = "#E6E6FA">
-<img src = "UBC_logo_b2.jpg" height="200" width="200" >
+&nbsp;
 </body>
 <head>
-    <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <script src="bootstrap/assets/js/respond.min.js"></script>  
-		<script src="jquery-1.10.0.min.js"></script>
-		<meta charset="UTF-8">
-		<title>PrePAIR Me</title>
-		<h1 style = "text-align: center;"> <br>Welcome To PrePAIR Me!</h1>
+	<link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+		<script src="bootstrap/assets/js/respond.min.js"></script>
+			<script src="jquery-1.10.0.min.js"></script>
+			<meta charset="UTF-8">
+			<title>PrePAIR Me</title>
+			<h1 style = "text-align: center;">
+			<img src = "UBC_logo_b2.jpg" alt ="UBC Logo" height="120" width="100" >Welcome To PrePAIR Me!</h1>
 		
 <style>
 #round
@@ -115,7 +116,7 @@ $(document).ready(function(){
 <div  style = "margin-left:auto; margin-right:auto; width:50%; position :relative;">
 <div style = "margin-left:0;">
 <form action="result.php" method="post">
-<br><br> <input type="text" id = "input" name="input"  style="width:100%;height:20px;font-size:18px;" >
+<br><br> <input type="text" id = "input" name="input"  style="width:100%;height:20px;font-size:12px;" >
 <input type = "submit" value = "Search" id ="search" name ="key" style="width:10%;font-size:15px; margin-left: 90.6%;"> <br
 </form>
 </div>
