Improved and fixed wonky positioning of search bar+button, suggested words. Browser and resolution recommendations now locked to the bottom right. Also added some blue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<script src="jquery-1.10.0.min.js"></script>
 			<meta charset="UTF-8">
 			<title>PrePAIR Me</title>
-			<h1 style = "text-align: center;">
+			<h1 style = "text-align: center; background-color: #002D79; color: #FFFFFF;">
 			<img src = "UBC_logo_b2.jpg" alt ="UBC Logo" height="120" width="100" >Welcome To PrePAIR Me!</h1>
 		
 <style>
@@ -112,19 +112,23 @@ $(document).ready(function(){
     </div>
 </div>
     
-
+<br><br>
 <div  style = "margin-left:auto; margin-right:auto; width:50%; position :relative;">
-<div style = "margin-left:0;">
-<form action="result.php" method="post">
-<br><br> <input type="text" id = "input" name="input"  style="width:100%;height:20px;font-size:12px;" >
-<input type = "submit" value = "Search" id ="search" name ="key" style="width:10%;font-size:15px; margin-left: 90.6%;"> <br
-</form>
-</div>
-
-Search Suggest
-<div style = "border:2px dotted; border-radius: 10px; height: auto;width: 100%; ">
-<div id="data" style="cursor: pointer;"></div>
-</div>
+	<div style = "margin-left:0">
+		<form action="result.php" method="post" style="display: inline-block; width: 84%">
+		 	<input type="text" id = "input" name="input"  style="width:100%; height:25px; font-size:15px">
+		</form>
+		<form action="result.php" method="post" style="display: inline-block; width: 15%">
+			<input type = "submit" value = "Search" id ="search" name ="key" style="width: 70px; height:25px; font-size:15px">&nbsp;
+		</form>
+	</div>
+	
+	<br><br>
+	Search Suggestions
+	<div style = "border:2px dotted; border-radius: 10px; height: auto;width: 100%; ">
+		<div id="data" style="cursor: pointer;">
+		</div>
+	</div>
 </div>
 
 <script src="bootstrap/assets/js/jquery.js"></script>
@@ -132,7 +136,7 @@ Search Suggest
 <script src="bootstrap/assets/js/holder.js"></script>
 
 </body>
-<footer style = "text-align:right; font-size:13px;">
-Chrome and 1024x768 or above resolution is recommended.<br>
+<footer style = "text-align:right; font-size:13px; position:absolute; bottom:0; right:0">
+	Chrome and 1024x768 or above resolution is recommended.<br>
 </footer>
 </html>
