--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!doctype html>
 <html>
-<body bgcolor = "#E6E6FA">
-<img src = "UBC_logo_b2.jpg" height="200" width="200" >
-</body>
 <head>
     <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <script src="bootstrap/assets/js/respond.min.js"></script>  
 		<script src="jquery-1.10.0.min.js"></script>
 		<meta charset="UTF-8">
 		<title>PrePAIR Me</title>
-		<h1 style = "text-align: center;"> <br>Welcome To PrePAIR Me!</h1>
+		<h1 style = "text-align: center;"> <img src = "UBC_logo_b2.jpg" height="100" width="100" >Welcome To PrePAIR Me!</h1>
 		
 <style>
 #round
@@ -62,7 +59,6 @@ $(document).ready(function(){
 
 </head>
 <body>
-<div style = "overflow: auto; height: 40%">
 <div id="myCarousel" class="carousel slide">
       <!-- Indicators -->
       <div class="carousel-inner">
@@ -109,14 +105,13 @@ $(document).ready(function(){
       <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </div>
-</div>
     
 
 <div  style = "margin-left:auto; margin-right:auto; width:50%; position :relative;">
 <div style = "margin-left:0;">
 <form action="result.php" method="post">
-<br><br> <input type="text" id = "input" name="input"  style="width:100%;height:20px;font-size:18px;" >
-<input type = "submit" value = "Search" id ="search" name ="key" style="width:10%;font-size:15px; margin-left: 90.6%;"> <br
+<br><br> <input type="text" id = "input" name="input"  style="width:100%;height:20%;font-size:18px;" >
+<input type = "submit" value = "Search" id ="search" name ="key" style="width:10%;font-size:15px; margin-left: 90.6%;"> <br>
 </form>
 </div>
 
