--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<script src="jquery-1.10.0.min.js"></script>
 		<meta charset="UTF-8">
 		<title>PrePAIR Me</title>
-		<h1 style = "text-align: center;"> <img src = "UBC_logo_b2.jpg" height="100" width="100" >Welcome To PrePAIR Me!</h1>
+		<h1 style = "text-align: center; background-color: #002D79; color: #FFFFFF;">
+		<img src = "UBC_logo_b2.jpg" height="100" width="100" >Welcome To PrePAIR Me!</h1>
 		
 <style>
 #round
