--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ $(document).ready(function(){
     </div>
 
     <br><br>
-    Search Suggest
+    Search Suggestions
     <div style = "border:2px dotted; border-radius: 10px; height: auto;width: 100%; ">
         <div id="data" style="cursor: pointer;"></div>
     </div>
