--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ $(document).ready(function(){
 
 </head>
 <body>
+<div style =" overflow:auto; overflow-y:hidden;height :40%;">
 <div id="myCarousel" class="carousel slide">
       <!-- Indicators -->
       <div class="carousel-inner">
@@ -106,7 +107,7 @@ $(document).ready(function(){
       <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </div>
-    
+   </div>
 
 <div  style = "margin-left:auto; margin-right:auto; width:50%; position :relative;">
 <div style = "margin-left:0;">
